
1.2.14 Release Fixes
====================
* LDEV-3456: Adding further POST support.

1.2.15 Release Fixes
1.2.16 Release Fixes
====================
* LDEV-3456: Adding new parameters to LAMSLearningDesign and StartLesson calls

1.2.17 Release Fixes
====================
* LDEV-3510: Previous releases were opening lessons in a new window due to a change made for LDEV-3510. 
Now reverted back to previous behaviour with lesson loading in the same tab.
* LKC-61: Gradebook syncing change
* LDEV-3621: Ability to import and use groups from integrated server

1.2.18 Release Fixes
====================
* LDEV-3399: Support Course Copy feature in Blackboard
* LDEV-3704: Ability to modify BB lessons' URL host name
* LDEV-3881: Increase popup size (to 1280x720)
* LDEV-3880: Notification ON by default with Blackboard integration

1.2.19 Release Fixes
====================
* LDEV-3399: Course Copy feature. Remove auxiliary building block and introduce special button to update LAMS links with new lesson ids.
* LDEV-3897: Ability to fix LAMS lessons in imported courses
* LDEV-3905: Fixed exception that was thrown on trying to start a lesson while folder selected
* LDEV-3939: Grade center column now gets created on course copy/import; Refactoring of Java code; All util classes moved to org.lamsfoundation.ld.integration.util package
* LDEV-3927: Fixed a FF bug: "Open Lesson" not open in firefox browser for the second time after closing the opened window
* LDEV-3510: Remove previously added line that made LAMS Lessons always appear at top of content list
* LDEV-3958: Add a button to admin page that can fix grade center columns
* LDEV-4080: Blackboard sends _course_id instead of courseId string to LAMS on creating new lessons

1.2.20 Release Fixes. Works with WF from now on
====================
* LDEV-4162: Add a parameter to LearningDesignSVG for lessonId
* LDEV-4163: Integration API that returns true if the LD has outputs
* LDEV-4164: Fix sorting in BB content area